# sjs

./: .clang_complete  .gitignore  CMakeLists.txt  README.md  bench.sh  benchmarks.md  compile_flags.txt  context.json  format.sh  test.sh
cmake/modules/: build_custom.cmake  sjs_deps.cmake
include/js/: args.h  js.h  js_AST.h  js_eval.h  js_frame.h  js_gc.h  js_io.h  js_iterator.h  js_lexer.h  js_list.h  js_mem.h  js_parser.h  js_path.h  js_string.h  js_token.h  macros.h  stack_pointers.h
include/js/builtins/: array.h  error.h  macros.h  math.h  object.h  process.h  string.h  utils.h
include/js/builtins/console/: console.h
include/js/builtins/functions/: functions.h  parse_int.h
include/js/frontend/: frontend.h  instruction.h
include/js/frontend/asm32/: asm32.h
include/js/frontend/js/: js.h
optimize/: __main__.py  setup.py
optimize/sourcefiles/: array_from.js  object_assign.js  string_map.js
optimize/templates/: benchmark.md  interpreter.md  main.md  wrap.md
playground/: Error.js  array.js  array_constructor.js  arrow_func.js  asm.js  asm2.js  assign.js  bitwise_and.js  bitwise_not.js  bitwise_or.js  bitwise_signed_right_shift.js  bitwise_xor.js  bitwise_zero_fill_left_shift.js  bitwise_zero_fill_right_shift.js  class.js  for.js  foreach.js  hello.js  if.js  map.js  math.js  module_exports.js  new.js  num.js  number_assign.js  object.js  object_keys.js  object_values.js  process.js  string.js  string_concat.js  string_length.js  string_map.js  try_catch.js  unop.js  vec.js  while.js
playground/projects/calculator/utils/: math.js
src/: js.c  js_AST.c  js_eval.c  js_frame.c  js_gc.c  js_io.c  js_iterator.c  js_lexer.c  js_list.c  js_mem.c  js_parser.c  js_path.c  js_string.c  js_token.c  main.c
src/builtins/: array.c  array.gpp  error.c  error.gpp  math.c  math.gpp  object.c  object.gpp  process.c  process.gpp  string.c  utils.c
src/builtins/console/: console.c
src/builtins/functions/: functions.c  functions.gpp  parse_int.c
src/enums/: AST_TYPES.gpp  TOKEN_TYPES.gpp
src/frontend/: instruction.c
src/frontend/asm32/: asm32.backup.c.txt  asm32.c
src/frontend/asm32/templates/: assign.s  bootstrap.s  call.s  function_begin.s  program_return.s  reset.s  return.s
src/frontend/js/: js.c
src/frontend/js/templates/: assign.js  call.js  class.js  class_function.js  construct.js  definition.js  for.js  function.js  while.js
tests/: CMakeLists.txt  xjs_e
tests/sourcefiles/: construct.js  foreach.js  func.js  if.js  map.js  object_nested.js  object_nested_assign.js  or_or.js  parseInt.js  string_length.js
tests/sourcefiles/projects/calculator/: index.js
tests/src/: main.c
tests/tests/: context.json  test
